kubernetes/k3s-prod-a/workloads/sonarr/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: torrenting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: docker.io/linuxserver/sonarr:4.0.12@sha256:0b45e56ad4acd89072b96702e4cc1088fb31235d6fa8458c738e250ebb7acaa4
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: sonarr-downloads
              mountPath: /downloads
            - name: sonarr-shows
              mountPath: /shows
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: sonarr-downloads
          persistentVolumeClaim:
            claimName: sonarr-downloads
        - name: sonarr-shows
          persistentVolumeClaim:
            claimName: sonarr-shows
