kubernetes/k3s-prod-a/workloads/sonarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: torrenting
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
  selector:
    app: sonarr
